03-bison-antlr/gen/SlylangParser.java
// Generated from /Users/personal/translation-methods/03-bison-antlr/src/Slylang.g4 by ANTLR 4.9.1

    import java.util.ArrayList;
    import java.util.HashSet;
    import java.util.stream.Collectors;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SlylangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELIF=2, ELSE=3, LOOP=4, FOR=5, IN=6, UNTIL=7, BREAK=8, CONTINUE=9, 
		SCAN=10, ECHO=11, RET=12, AND=13, OR=14, XOR=15, NOT=16, NOT_EQ=17, EQ=18, 
		PLUS=19, MINUS=20, MULTIPLY=21, DIVIDE=22, MOD=23, ASSIGN=24, COMMA=25, 
		LP=26, RP=27, LT=28, GT=29, LCB=30, RCB=31, ID=32, INT=33, WS=34;
	public static final int
		RULE_file = 0, RULE_functionDefinitions = 1, RULE_functionDefinition = 2, 
		RULE_argumentsClosure = 3, RULE_ret = 4, RULE_argumentS = 5, RULE_arguments_ = 6, 
		RULE_statements = 7, RULE_statement = 8, RULE_scan_stmt = 9, RULE_echo_stmt = 10, 
		RULE_if_stmt = 11, RULE_else_ = 12, RULE_elifs_ = 13, RULE_loop = 14, 
		RULE_for_stmt = 15, RULE_assignment = 16, RULE_expressionS = 17, RULE_expression = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "functionDefinitions", "functionDefinition", "argumentsClosure", 
			"ret", "argumentS", "arguments_", "statements", "statement", "scan_stmt", 
			"echo_stmt", "if_stmt", "else_", "elifs_", "loop", "for_stmt", "assignment", 
			"expressionS", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'elif'", "'else'", "'loop'", "'for'", "'in'", "'until'", 
			"'break'", "'continue'", "'scan'", "'echo'", "'ret'", "'and'", "'or'", 
			"'xor'", "'not'", "'!='", "'=='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'='", "','", "'('", "')'", "'<'", "'>'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELIF", "ELSE", "LOOP", "FOR", "IN", "UNTIL", "BREAK", "CONTINUE", 
			"SCAN", "ECHO", "RET", "AND", "OR", "XOR", "NOT", "NOT_EQ", "EQ", "PLUS", 
			"MINUS", "MULTIPLY", "DIVIDE", "MOD", "ASSIGN", "COMMA", "LP", "RP", 
			"LT", "GT", "LCB", "RCB", "ID", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Slylang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SlylangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public String cpp;
		public FunctionDefinitionsContext xs;
		public TerminalNode EOF() { return getToken(SlylangParser.EOF, 0); }
		public FunctionDefinitionsContext functionDefinitions() {
			return getRuleContext(FunctionDefinitionsContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((FileContext)_localctx).xs = functionDefinitions(0);
			setState(39);
			match(EOF);

			        ArrayList<String> lines = new ArrayList<String>();

			        lines.add("#include <iostream>");
			        lines.add("using namespace std;");
			        lines.add("");
			        lines.addAll(((FileContext)_localctx).xs.declarations);
			        lines.add(((FileContext)_localctx).xs.cpp);

			        ((FileContext)_localctx).cpp =  String.join("\n", lines);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionsContext extends ParserRuleContext {
		public String cpp;
		public ArrayList<String> declarations;
		public FunctionDefinitionsContext xs;
		public FunctionDefinitionContext x;
		public FunctionDefinitionsContext functionDefinitions() {
			return getRuleContext(FunctionDefinitionsContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public FunctionDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterFunctionDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitFunctionDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitFunctionDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionsContext functionDefinitions() throws RecognitionException {
		return functionDefinitions(0);
	}

	private FunctionDefinitionsContext functionDefinitions(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FunctionDefinitionsContext _localctx = new FunctionDefinitionsContext(_ctx, _parentState);
		FunctionDefinitionsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_functionDefinitions, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			 ((FunctionDefinitionsContext)_localctx).cpp =  ""; ((FunctionDefinitionsContext)_localctx).declarations =  new ArrayList<String>(); 
			}
			_ctx.stop = _input.LT(-1);
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new FunctionDefinitionsContext(_parentctx, _parentState);
					_localctx.xs = _prevctx;
					_localctx.xs = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_functionDefinitions);
					setState(45);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(46);
					((FunctionDefinitionsContext)_localctx).x = functionDefinition();
					 ((FunctionDefinitionsContext)_localctx).cpp =  String.format("%s\n\n%s", ((FunctionDefinitionsContext)_localctx).xs.cpp, ((FunctionDefinitionsContext)_localctx).x.cpp); ((FunctionDefinitionsContext)_localctx).declarations =  ((FunctionDefinitionsContext)_localctx).xs.declarations; _localctx.declarations.add(((FunctionDefinitionsContext)_localctx).x.declaration); 
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public String cpp;
		public String declaration;
		public Token ID;
		public ArgumentsClosureContext a;
		public StatementsContext s;
		public TerminalNode ID() { return getToken(SlylangParser.ID, 0); }
		public TerminalNode LCB() { return getToken(SlylangParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(SlylangParser.RCB, 0); }
		public ArgumentsClosureContext argumentsClosure() {
			return getRuleContext(ArgumentsClosureContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterFunctionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitFunctionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((FunctionDefinitionContext)_localctx).ID = match(ID);
			setState(55);
			((FunctionDefinitionContext)_localctx).a = argumentsClosure();
			setState(56);
			match(LCB);
			setState(57);
			((FunctionDefinitionContext)_localctx).s = statements(0);
			setState(58);
			match(RCB);

			        String args = String.join(", ", ((FunctionDefinitionContext)_localctx).a.list.stream().map(str -> "int " + str).collect(Collectors.toList()));
			        ((FunctionDefinitionContext)_localctx).declaration =  String.format(
			            "int %s(%s);",
			            (((FunctionDefinitionContext)_localctx).ID!=null?((FunctionDefinitionContext)_localctx).ID.getText():null),
			            args
			        );
			        ((FunctionDefinitionContext)_localctx).s.used.removeAll(((FunctionDefinitionContext)_localctx).a.list);
			        ((FunctionDefinitionContext)_localctx).s.used.add("_");
			        ((FunctionDefinitionContext)_localctx).cpp =  String.format(
			            "int %s(%s) {\nint %s;\n\n%s\n}",
			            (((FunctionDefinitionContext)_localctx).ID!=null?((FunctionDefinitionContext)_localctx).ID.getText():null),
			            args,
			            String.join(", ", ((FunctionDefinitionContext)_localctx).s.used),
			            String.join("\n", ((FunctionDefinitionContext)_localctx).s.list)
			        );
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsClosureContext extends ParserRuleContext {
		public List<String> list;
		public ArgumentSContext xs;
		public TerminalNode LP() { return getToken(SlylangParser.LP, 0); }
		public TerminalNode RP() { return getToken(SlylangParser.RP, 0); }
		public ArgumentSContext argumentS() {
			return getRuleContext(ArgumentSContext.class,0);
		}
		public ArgumentsClosureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentsClosure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterArgumentsClosure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitArgumentsClosure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitArgumentsClosure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsClosureContext argumentsClosure() throws RecognitionException {
		ArgumentsClosureContext _localctx = new ArgumentsClosureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argumentsClosure);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LP:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(LP);
				setState(62);
				((ArgumentsClosureContext)_localctx).xs = argumentS();
				setState(63);
				match(RP);
				 ((ArgumentsClosureContext)_localctx).list =  ((ArgumentsClosureContext)_localctx).xs.list.stream().map(str -> "_" + str).collect(Collectors.toList()); 
				}
				break;
			case LCB:
				enterOuterAlt(_localctx, 2);
				{
				 ((ArgumentsClosureContext)_localctx).list =  new ArrayList<String>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public String cpp;
		public ExpressionContext x;
		public TerminalNode RET() { return getToken(SlylangParser.RET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ret);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(RET);
			setState(70);
			((RetContext)_localctx).x = expression(0);
			 ((RetContext)_localctx).cpp =  String.format("return %s;", ((RetContext)_localctx).x.cpp); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentSContext extends ParserRuleContext {
		public ArrayList<String> list;
		public Token ID;
		public Arguments_Context xs;
		public TerminalNode ID() { return getToken(SlylangParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(SlylangParser.COMMA, 0); }
		public Arguments_Context arguments_() {
			return getRuleContext(Arguments_Context.class,0);
		}
		public ArgumentSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterArgumentS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitArgumentS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitArgumentS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentSContext argumentS() throws RecognitionException {
		ArgumentSContext _localctx = new ArgumentSContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argumentS);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				((ArgumentSContext)_localctx).ID = match(ID);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(74);
					match(COMMA);
					}
				}

				 ((ArgumentSContext)_localctx).list =  new ArrayList<String>(); _localctx.list.add((((ArgumentSContext)_localctx).ID!=null?((ArgumentSContext)_localctx).ID.getText():null)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				((ArgumentSContext)_localctx).xs = arguments_(0);
				setState(79);
				((ArgumentSContext)_localctx).ID = match(ID);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(80);
					match(COMMA);
					}
				}

				 ((ArgumentSContext)_localctx).list =  ((ArgumentSContext)_localctx).xs.list; _localctx.list.add((((ArgumentSContext)_localctx).ID!=null?((ArgumentSContext)_localctx).ID.getText():null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arguments_Context extends ParserRuleContext {
		public ArrayList<String> list;
		public Arguments_Context xs;
		public Token ID;
		public TerminalNode ID() { return getToken(SlylangParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(SlylangParser.COMMA, 0); }
		public Arguments_Context arguments_() {
			return getRuleContext(Arguments_Context.class,0);
		}
		public Arguments_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterArguments_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitArguments_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitArguments_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arguments_Context arguments_() throws RecognitionException {
		return arguments_(0);
	}

	private Arguments_Context arguments_(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Arguments_Context _localctx = new Arguments_Context(_ctx, _parentState);
		Arguments_Context _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_arguments_, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			 ((Arguments_Context)_localctx).list =  new ArrayList<String>(); 
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Arguments_Context(_parentctx, _parentState);
					_localctx.xs = _prevctx;
					_localctx.xs = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_arguments_);
					setState(90);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(91);
					((Arguments_Context)_localctx).ID = match(ID);
					setState(92);
					match(COMMA);
					 ((Arguments_Context)_localctx).list =  ((Arguments_Context)_localctx).xs.list; _localctx.list.add((((Arguments_Context)_localctx).ID!=null?((Arguments_Context)_localctx).ID.getText():null)); 
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public ArrayList<String> list;
		public HashSet<String> used;
		public StatementsContext xs;
		public StatementContext x;
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SlylangListener ) ((SlylangListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlylangVisitor ) return ((SlylangVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		return statements(0);
	}

	private StatementsContext statements(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatementsContext _localctx = new StatementsContext(_ctx, _parentState);
		StatementsContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_statements, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
